# VOC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
samples/: params.yaml
src/voc/: __main__.py  inference.py
src/voc/utils/: image_processing.py  yod.py
